test/dryrun/no_name/with_object_selector/musthave_mixed_noncompliant/desired_status.yaml
relatedObjects:
- compliant: Compliant
  object:
    apiVersion: networking.k8s.io/v1
    kind: Ingress
    metadata:
      name: good-ingress
      namespace: default
  reason: Resource found as expected
- compliant: NonCompliant
  object:
    apiVersion: networking.k8s.io/v1
    kind: Ingress
    metadata:
      name: wrong-1-ingress
      namespace: default
  reason: Resource found but does not match
- compliant: NonCompliant
  object:
    apiVersion: networking.k8s.io/v1
    kind: Ingress
    metadata:
      name: wrong-2-ingress
      namespace: default
  reason: Resource found but does not match
compliant: NonCompliant
