test/dryrun/no_name/with_object_selector/musthave_mixed_noncompliant/input_bad.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: wrong-1-ingress
  labels:
    test.dev/foo: ismatch
spec:
  ingressClassName: wrong-name
  rules:
    - http: 
       paths: 
         - path: /testpath
           pathType: Prefix
           backend:
            service:
              name: test
              port:
                number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: wrong-2-ingress
  labels:
    test.dev/foo: ismatch
spec:
  ingressClassName: wrong-name
  rules:
    - http: 
       paths: 
         - path: /testpath
           pathType: Prefix
           backend:
            service:
              name: test
              port:
                number: 801
