test/dryrun/no_name/with_object_selector/musthave_mixed_noncompliant/input_good.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: good-ingress
  labels:
    test.dev/foo: ismatch
spec:
  ingressClassName: test
  rules:
    - http: 
       paths: 
         - path: /testpath
           pathType: Prefix
           backend:
            service:
              name: test
              port:
                number: 80
