test/dryrun/no_name/with_object_selector/musthave_mixed_noncompliant/output.txt
# Status compare:
[32m.compliant: 'NonCompliant' does match 'NonCompliant'[0m
[32m.relatedObjects[0] matches[0m
[32m.relatedObjects[1] matches[0m
[32m.relatedObjects[2] matches[0m
[32m.relatedObjects matches[0m
[32m[1m Expected status matches the actual status [0m[0m

# Diffs:
networking.k8s.io/v1 Ingress default/good-ingress:

networking.k8s.io/v1 Ingress default/wrong-1-ingress:
--- default/wrong-1-ingress : existing
+++ default/wrong-1-ingress : updated
@@ -4,11 +4,11 @@
   labels:
     test.dev/foo: ismatch
   name: wrong-1-ingress
   namespace: default
 spec:
-  ingressClassName: wrong-name
+  ingressClassName: test
   rules:
   - http:
       paths:
       - backend:
           service:
networking.k8s.io/v1 Ingress default/wrong-2-ingress:
--- default/wrong-2-ingress : existing
+++ default/wrong-2-ingress : updated
@@ -4,11 +4,11 @@
   labels:
     test.dev/foo: ismatch
   name: wrong-2-ingress
   namespace: default
 spec:
-  ingressClassName: wrong-name
+  ingressClassName: test
   rules:
   - http:
       paths:
       - backend:
           service:
# Compliance messages:
NonCompliant; violation - ingresses [wrong-1-ingress, wrong-2-ingress] found but not as specified in namespace default
