test/dryrun/no_name/with_object_selector/musthave_mixed_noncompliant/output_from_cluster.txt
# Status compare:
.compliant: 'NonCompliant' does match 'NonCompliant'
.relatedObjects[0] matches
.relatedObjects[1] matches
.relatedObjects[2] matches
.relatedObjects matches
 Expected status matches the actual status

# Diffs:
networking.k8s.io/v1 Ingress default/good-ingress:

networking.k8s.io/v1 Ingress default/wrong-1-ingress:
--- default/wrong-1-ingress : existing
+++ default/wrong-1-ingress : updated
@@ -7,11 +7,11 @@
   name: wrong-1-ingress
   namespace: default
 spec:
-  ingressClassName: wrong-name
+  ingressClassName: test
   rules:
   - http:
       paths:
       - backend:
           service:
networking.k8s.io/v1 Ingress default/wrong-2-ingress:
--- default/wrong-2-ingress : existing
+++ default/wrong-2-ingress : updated
@@ -7,11 +7,11 @@
   name: wrong-2-ingress
   namespace: default
 spec:
-  ingressClassName: wrong-name
+  ingressClassName: test
   rules:
   - http:
       paths:
       - backend:
           service:
# Compliance messages:
NonCompliant; violation - ingresses [wrong-1-ingress, wrong-2-ingress] found but not as specified in namespace default
